Fixed the overflow of flaglist and made it scroll.

--- a/style.css
+++ b/style.css
@@ -17,16 +17,35 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
 }
+
 .stopwatch {
-    display: block;
+    display: flex;
+    flex-direction: column;
     width: 100%;
     max-width: 500px;
     height: 500px;
     border-radius: 5px;
     border: 2px solid #ccc;
-    padding: 40px;
+    padding: 40px 40px 10px 40px;
     background: transparent;
+}
 
+.header {
+    top: 0;
+    background: transparent;
+    padding: 10px;
+    display: block;
+    z-index: 1;
+}
+
+.Flist {
+    overflow-y: scroll;
+    flex: 1;
+    padding-left: 30px;
+}
+
+.Flist::-webkit-scrollbar {
+    display: none;
 }
 
 #display {
